--- a/mogo-apps-ios/add-withdraw-saving/addWithdrawStoryboard.storyboard
+++ b/mogo-apps-ios/add-withdraw-saving/addWithdrawStoryboard.storyboard
@@ -117,7 +117,7 @@
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="cpd-Bw-5xj">
                             <color key="tintColor" red="0.093237645920000001" green="0.47508078809999998" blue="0.43137091399999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <connections>
-                                <segue destination="jET-xq-VV0" kind="unwind" unwindAction="unwindToFirstViewController:" id="p3e-Os-GKc"/>
+                                <segue destination="jET-xq-VV0" kind="unwind" unwindAction="unwindToFirstViewController:" id="Sij-u6-my3"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="a3M-xe-wl6">
