--- a/mogo-apps-ios/reminder-list/ReminderList.storyboard
+++ b/mogo-apps-ios/reminder-list/ReminderList.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="128" width="414" height="744"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="414" id="81D-1r-W00"/>
+                                    <constraint firstAttribute="height" constant="744" id="AAM-51-O28"/>
                                 </constraints>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="reminderCellIdentifier" textLabel="Xuu-iV-tqV" detailTextLabel="eZr-iY-xSX" rowHeight="58" style="IBUITableViewCellStyleSubtitle" id="k3F-aF-QXs" customClass="ReminderViewCell" customModule="mogo_apps_ios" customModuleProvider="target">
@@ -59,7 +59,11 @@
                                 </connections>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="REMINDER LIST" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iVt-m4-0vW">
-                                <rect key="frame" x="20" y="104" width="97" height="16"/>
+                                <rect key="frame" x="16" y="106" width="97" height="16"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="16" id="Eg7-ax-6zm"/>
+                                    <constraint firstAttribute="width" constant="97" id="FRZ-jf-d4E"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -68,11 +72,11 @@
                         <viewLayoutGuide key="safeArea" id="X4e-zt-I8r"/>
                         <color key="backgroundColor" systemColor="systemGray6Color"/>
                         <constraints>
-                            <constraint firstAttribute="bottomMargin" secondItem="AyT-5L-sx3" secondAttribute="bottom" constant="-10" id="4sO-vh-bsF"/>
-                            <constraint firstItem="AyT-5L-sx3" firstAttribute="top" secondItem="iVt-m4-0vW" secondAttribute="bottom" constant="8" symbolic="YES" id="5tB-9a-RTj"/>
-                            <constraint firstItem="iVt-m4-0vW" firstAttribute="leading" secondItem="IgH-GC-sG6" secondAttribute="leadingMargin" id="HCw-le-EGH"/>
-                            <constraint firstItem="AyT-5L-sx3" firstAttribute="top" secondItem="X4e-zt-I8r" secondAttribute="top" constant="40" id="gmF-lJ-C0R"/>
-                            <constraint firstItem="AyT-5L-sx3" firstAttribute="centerX" secondItem="IgH-GC-sG6" secondAttribute="centerX" id="h7C-dO-DMg"/>
+                            <constraint firstItem="AyT-5L-sx3" firstAttribute="leading" secondItem="X4e-zt-I8r" secondAttribute="leading" id="Sas-MU-EiW"/>
+                            <constraint firstItem="AyT-5L-sx3" firstAttribute="trailing" secondItem="X4e-zt-I8r" secondAttribute="trailing" id="bIA-Cb-LMK"/>
+                            <constraint firstItem="iVt-m4-0vW" firstAttribute="leading" secondItem="X4e-zt-I8r" secondAttribute="leading" constant="16" id="gge-dT-prE"/>
+                            <constraint firstItem="AyT-5L-sx3" firstAttribute="top" secondItem="iVt-m4-0vW" secondAttribute="bottom" constant="6" id="xf4-0A-0tB"/>
+                            <constraint firstItem="iVt-m4-0vW" firstAttribute="top" secondItem="X4e-zt-I8r" secondAttribute="top" constant="18" id="yUi-e0-251"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="TFC-md-0Ok">
@@ -99,32 +103,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xkJ-q4-9NQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="934" y="577"/>
-        </scene>
-        <!--Detail View Controller-->
-        <scene sceneID="m9X-C7-00J">
-            <objects>
-                <viewController id="EsT-ex-Ahp" customClass="DetailViewController" customModule="mogo_apps_ios" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="4Jq-Fi-56a">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="gye-D4-47s"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="Vc4-ic-Bp9"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="FzJ-tu-E5M" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1750.7246376811595" y="249.77678571428569"/>
-        </scene>
-        <!--Home-->
-        <scene sceneID="knQ-GV-Ezd">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="LlU-gT-x4O" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <viewControllerPlaceholder storyboardIdentifier="fromHome" storyboardName="Home" id="KCq-4m-0Xl" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="OW8-eZ-72l"/>
-                </viewControllerPlaceholder>
-            </objects>
-            <point key="canvasLocation" x="661" y="-291"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Aiz-Rp-vu6">
